# injected

./: .gitignore
dll_source/: CMakeLists.txt
dll_source/qmlinjectdll/: CMakeLists.txt  dllmain.cpp  qqq.cpp
dll_source/winmsg_listener/: dllmain.cpp  qqq.h
